# carlisle-pay-review

./: .gitignore  DEPLOYMENT.md  PROJECT_CONTEXT.md  README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b8525245472_add_proposed_award.py  5bd77786e327_add_age_to_employees.py  63398eefd33b_initial_schema_users_cycles_employees_.py  7c4a91f02e10_overhaul_for_four_file_upload.py  91f1732f0e4b_add_historical_compliance_columns.py  962044c71bb9_add_compliance_suppressions.py  a59e846b9223_add_generated_files_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  cycles.py  downloads.py  review.py  uploads.py
backend/app/core/: dependencies.py  security.py
backend/app/models/: __init__.py  approval.py  audit_log.py  award_rate.py  base.py  budget.py  compliance_suppression.py  cycle.py  employee.py  generated_file.py  junior_rate.py  pp_band.py  user.py
backend/app/schemas/: auth.py  cycle.py  review.py  upload.py
backend/app/services/: compliance.py  cycles.py  documents.py  excel_parser.py  storage.py
backend/app/services/parsers/: __init__.py  _helpers.py  award_summary.py  employees.py  pp_admin.py  pp_bands_common.py  pp_tech.py
docs/: MIGRATION_PLAN.md  architecture.md
frontend/: .env.example  .gitignore  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: approvals-client.tsx  cycle-settings-client.tsx  dashboard-charts.tsx  downloads-client.tsx  (+7 more)
scripts/: seed_admin.py
(+29 files in other folders)
